--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My GitHub Pages Site</title>
+    <title>KeyPad Demo</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
+    <h1>KeyPad Demo</h1>
+    <p>CSS demo to be added shortly</p>
   </body>
 </html>
