--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>KeyPad Demo</h1>
-    <p>CSS demo to be added shortly</p>
+    <p>CSS demo and source code to be added shortly</p>
   </body>
 </html>
