--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>KeyPad Demo</title>
+    <title>KeyPad CSS Demo</title>
     <link rel="stylesheet" href="src/styles/keypad.css">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Viewport_meta_tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -112,6 +112,7 @@
     let size = (referenceSize*multipler).toString();
     containerElement.style.fontSize = `${size}px`;
   }
+  // TODO: Develop a better solution
   // There is probably a better solution
   // https://css-tricks.com/fitting-text-to-a-container/
   function resizeFunc(){
